Revision history for Perl extension EAV::XS.

0.7.6  Sun Mar 19 14:53:23 UTC 2023
	- update IANA database

0.7.5  Thu Mar  9 13:53:46 UTC 2023
	- update IANA database

0.7.4  Sun Dec 18 08:57:35 UTC 2022
	- update IANA database

0.7.3  Wed Dec  7 06:30:49 UTC 2022
	- added notes about installing dependencies, thanks to Gabor Szabo
	- update IANA database

0.7.2  Sat Oct 15 13:50:26 UTC 2022
	- skip return value check of setlocale in tests
	- fixed passing RFC options when generating XS.c

0.7.1  Wed Oct 12 08:35:52 UTC 2022
	- fixed XS.c has generating with incorrect compiler options

0.7.0  Tue Oct 11 13:02:30 UTC 2022
	- update to libeav 1.2.0
	- underscores are prohibited inside of domain part

0.6.9  Sun Oct  9 05:59:37 UTC 2022
	- update IANA database

0.6.8  Wed Jul 19 21:12:46 UTC 2022
	- update IANA database

0.6.7  Fri Dec 31 05:18:27 UTC 2021
	- update IANA database

0.6.6  Sat Dec  4 18:41:57 UTC 2021
	- update IANA database

0.6.5  Mon Nov  1 16:47:25 UTC 2021
	- update IANA database

0.6.4  Wed Oct 27 12:19:28 UTC 2021
	- update IANA database

0.6.3  Thu Oct  7 16:41:39 UTC 2021
	- update IANA database

0.6.2  Tue Sep 28 16:05:18 UTC 2021
	- update IANA database

0.6.1  Sat Jun 26 07:02:17 UTC 2021
	- minor fixes in libeav

0.6.0  Sat Jun 19 11:03:59 UTC 2021
	- update IANA database
	- fixed CR and folding checks of RFC 822

0.5.6  Wed Apr 21 15:28:26 UTC 2021
	- update IANA database

0.5.5  Mon Feb 15 06:52:58 UTC 2021
	- update IANA database

0.5.4  Thu Feb 11 06:29:13 UTC 2021
	- update IANA database

0.5.3  Sat Nov 28 10:33:03 UTC 2020
	- update IANA database
	- added the test "20-dots.t" of dots checking
	- renamed t/11-rfc5322.t -> t/12-rfc5322.t
	- added new method "setup"

0.5.2  Sun Nov 22 02:35:52 UTC 2020
	- update IANA database
	- added repository information to Makefile.PL (thanks to Gabor Szabo)

0.5.1  Sat Oct 17 05:21:03 UTC 2020
	- update IANA database

0.5.0  Wed Jul 29 23:45:02 UTC 2020
	- added support for retired domains
